# aiidalab-empa-molecules

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Untitled.ipynb  __init__.py  report_kdesk.ipynb  search.ipynb  setup.cfg  spin_calculation.ipynb  start.py  stm.ipynb
.github/workflows/: ci.yml  di.yml
empa_molecules/: __init__.py  steps.py  utils.py  version.py  widgets.py
empa_molecules/templates/: search.j2
tests/: test_app.py
