[metadata]
name = aiidalab_empa_molecules
version = 22.01.0a1
description = App to compute molecular properties.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nanotech-empa/aiidalab-empa-molecules
author = nanotech-empa
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Logo = https://raw.githubusercontent.com/nanotech-empa/aiidalab-empa-molecules/master/img/logo.png
    Documentation = https://github.com/nanotech-empa/aiidalab-empa-molecules/#readme
    Bug Tracker = https://github.com/nanotech-empa/aiidalab-empa-molecules/issues

[options]
packages = find:
install_requires =
    aiida-gaussian>=1.4.3
    aiida-nanotech-empa>=0.5.1
    aiidalab>=21.11.0
    aiidalab-widgets-base~=1.3
python_requires = >=3.7

[options.extras_require]
dev =
    bumpver==2021.1114
    pre-commit==2.11.1

[aiidalab]
title = Empa nanotech@surfaces Laboratory - Molecules

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.

[bumpver]
current_version = "v22.01.0a1"
version_pattern = "v0Y.0M.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}."
commit = True
tag = True
push = True

[bumpver:file_patterns]
empa_molecules/version.py =
    __version__ = "{version}"
setup.cfg =
    current_version = "{version}"
    version = {pep440_version}
